# diskmap

./: .codecov.yml  .gitignore  .travis.yml  LICENSE  Makefile  README.rst  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  main.yml
diskmap/: __init__.py  _version.py  diskmap.py
docs/: about.rst  conf.py  diskmap.rst  index.rst  installation.rst  requirements.txt  tutorial.ipynb
docs/_build/doctrees/: about.doctree  diskmap.doctree  environment.pickle  index.doctree  installation.doctree  modules.doctree
docs/_build/html/: .buildinfo  about.html  diskmap.html  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/diskmap/: diskmap.html
docs/_build/html/_sources/: about.rst.txt  diskmap.rst.txt  modules.rst.txt
tests/: test_diskmap.py
