[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diskmap"
version = "0.2.0"
authors = [{name = "Tomas Stolker", email = "stolker@strw.leidenuniv.nl"}]
description = "Scattered light mapping of protoplanetary disks"
readme = "README.rst"
requires-python = ">=3.10,<3.13"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dynamic = ["dependencies"]

[project.urls]
Documentation = "https://diskmap.readthedocs.io"
Repository = "https://github.com/tomasstolker/diskmap"
Issues = "https://github.com/tomasstolker/diskmap/issues"

[tool.setuptools]
packages = ["diskmap"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
