[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "diskmap"
authors = [{name = "Tomas Stolker", email = "stolker@strw.leidenuniv.nl"}]
description = "Scattered light mapping of protoplanetary disks"
readme = "README.rst"
requires-python = ">=3.10,<3.13"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "astropy",
    "numpy",
    "scipy",
    "typeguard",
]
dynamic = ["version"]

[project.optional-dependencies]
docs = [
    "jupyter",
    "nbsphinx",
    "pandoc",
    "sphinx",
    "sphinx-automodapi",
    "sphinx_book_theme",
]
test = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "pylint",
    "pycodestyle",
]

[project.urls]
Documentation = "https://diskmap.readthedocs.io"
Repository = "https://github.com/tomasstolker/diskmap"
Issues = "https://github.com/tomasstolker/diskmap/issues"

[tool.setuptools]
packages = ["diskmap"]

[tool.setuptools_scm]
write_to = "diskmap/_version.py"
